--- a/CH2/0720.ipynb
+++ b/CH2/0720.ipynb
@@ -318,10 +318,455 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "for k in my_list:\n",
+    "    if k % 2 == 1:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "for k in my_list:\n",
+    "    if k == 3:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "for k in my_list:\n",
+    "    if k != 3:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "for k in my_list:\n",
+    "    if k >= 2 and k <= 4:\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "okinawa\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['okinawa','tokyo','osaka','fukuoka','hokkaido']\n",
+    "for k in my_list:\n",
+    "    if k =='okinawa':\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "okinawa\n",
+      "osaka\n",
+      "fukuoka\n",
+      "hokkaido\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['okinawa','tokyo','osaka','fukuoka','hokkaido']\n",
+    "for k in my_list:\n",
+    "    if k !='tokyo':\n",
+    "        print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['okinawa', 'fukuoka', 'hokkaido']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['okinawa','tokyo','osaka','fukuoka','hokkaido']\n",
+    "my_list_6 = []\n",
+    "for k in my_list:\n",
+    "    if len(k) >= 6:\n",
+    "        my_list_6.append(k)\n",
+    "print(my_list_6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "a = 0\n",
+    "for k in my_list:\n",
+    "    a += k\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0,1,2,3,4,5]\n",
+    "a = 0\n",
+    "for k in my_list:\n",
+    "    if k % 2 == 0:\n",
+    "        a += k\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(11):\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(11):\n",
+    "    if k == 4:\n",
+    "        break\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(11):\n",
+    "    if k == 3:\n",
+    "        continue\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "k\n",
+      "i\n",
+      "n\n",
+      "a\n",
+      "w\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_str = 'okinawa'\n",
+    "for s in my_str:\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "k\n",
+      "i\n",
+      "n\n",
+      "a\n",
+      "w\n",
+      "a\n",
+      "t\n",
+      "o\n",
+      "k\n",
+      "y\n",
+      "o\n",
+      "o\n",
+      "s\n",
+      "a\n",
+      "k\n",
+      "a\n",
+      "f\n",
+      "u\n",
+      "k\n",
+      "u\n",
+      "o\n",
+      "k\n",
+      "a\n",
+      "h\n",
+      "o\n",
+      "k\n",
+      "k\n",
+      "a\n",
+      "i\n",
+      "d\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['okinawa','tokyo','osaka','fukuoka','hokkaido']\n",
+    "for k in my_list:\n",
+    "    for m in k:\n",
+    "        print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OKINAWA\n",
+      "TOKYO\n",
+      "OSAKA\n",
+      "FUKUOKA\n",
+      "HOKKAIDO\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = ['okinawa','tokyo','osaka','fukuoka','hokkaido']\n",
+    "for k in my_list:\n",
+    "    print(k.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "while a < 11:\n",
+    "    if a == 5:\n",
+    "        break \n",
+    "    print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('Hello.txt','w')\n",
+    "f.write('Hello!!')\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('Hello.txt','r')\n",
+    "print(f.read())\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with  open('HelloPython.txt','w') as f:\n",
+    "    f.write('HelloPythin!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_list = []\n",
+    "with open('HelloPython.txt','r')as f:\n",
+    "    my_list"
+   ]
   }
  ],
  "metadata": {
